# FarmBot_ROS2

./: .gitignore
src/farmbot_rqt_plugins/: package.xml  plugin.xml  setup.cfg  setup.md  setup.py
src/farmbot_rqt_plugins/farmbot_rqt_plugins/: farmbedtwo_plugin.py  farmbot_llm_plugin.py  movement_plugin.py
src/farmbot_rqt_plugins/resource/: movement.ui
