<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farmbot_rqt_plugins</name>
  <version>0.0.0</version>
  <description>ROS2 Farmbot rqt plugins</description>
  <maintainer email="BRYAN.MCCARTHY.2025@mumail.ie">bryanmccarthy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>python_qt_binding</depend>

  <test_depend>ament_copyright</test_depend> 
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>